fix export filename

--- a/app/views/users/home.template.html
+++ b/app/views/users/home.template.html
@@ -38,7 +38,7 @@
 <div class="container-fluid bg-2 text-center">
     <h3>Tài liệu hướng dẫn sử dụng phần mềm</h3>
     <p>Phần mềm được xây dựng và thiết kế theo chuẩn MVC dựa trên Nodejs phía server và Angularjs phía client</p>
-    <a href="asset/document/Huong-dan-nhap-lieu.xlsx" download="Huong-dan-nhap-lieu.pdf"><button type="button" class="btn btn-success">Tải xuống</button></a>
+    <a href="asset/document/Huong-dan-nhap-lieu.pdf" download="Huong-dan-nhap-lieu.pdf"><button type="button" class="btn btn-success">Tải xuống</button></a>
 
 </div>
 <div class="container-fluid bg-3 text-center">
